--- a/ThrealdPoolExaustWebApi/appsettings.json
+++ b/ThrealdPoolExaustWebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ApplicationInsights": {
-    "ConnectionString": "InstrumentationKey=bb48d171-a6cf-46fc-8f94-7ac4f1d7dfd3;IngestionEndpoint=https://brazilsoutheast-0.in.applicationinsights.azure.com/"
+    "ConnectionString": ""
   }
 }
